<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".finishing.FinishingBuyerName">

    <include layout="@layout/toolbar"
        android:id="@+id/actionbar7"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_buyer_name"
            android:textColor="#000"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <AutoCompleteTextView
            android:id="@+id/finishing_autocomplet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_marginTop="30dp"
            android:completionHint="Select Buyer Name"
            android:completionThreshold="1"
            android:hint="@string/buyername" />


        <Button
            android:id="@+id/finishing_submit"
            android:layout_width="120dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_black"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>