<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dailyProductionReport.DPR_DisplayData">

    <include layout="@layout/toolbar"
        android:id="@+id/actionbar5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/style_no"
            android:textColor="#000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/style5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/dashes"
            android:textSize="15sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/buyer_name"
            android:textColor="#000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/dprbuyername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/dashes"
            android:textSize="15sp"

            />

    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/jobno"
                    android:textColor="#000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/jobno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/dashes"
                    android:textSize="15sp"

                    />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

        <ImageView

            android:layout_margin="5dp"
            android:id="@+id/dprimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/noimage"
            android:layout_gravity="center"
            />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="vertical">
            <ListView
                android:id="@+id/dpr_mandatory_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="8dp"    />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/cutting"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark" />

            <ListView
                android:id="@+id/dpr_cutting_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="8dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/sewing"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:textColor="@color/colorPrimaryDark" />

            <ListView

                android:id="@+id/dpr_sewing_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingBottom="10dp"
                />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/finishing"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:textColor="@color/colorPrimaryDark" />

            <ListView
                android:id="@+id/dpr_finishing_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/packing"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <ListView
                android:paddingBottom="10dp"
                android:id="@+id/dpr_packing_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>