<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sewing.Sewing_data">

    <include layout="@layout/toolbar"
        android:id="@+id/actionbar1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/style_no"
            android:textColor="#000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:textStyle="bold" />


        <TextView
            android:id="@+id/styleno1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/dashes"
            android:textSize="15sp"

            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/buyer_name"
            android:textColor="#000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:textStyle="bold" />


        <TextView
            android:id="@+id/sewing_buyername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dashes"
            android:gravity="center_vertical"
            android:textSize="15sp"

            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/jobno"
                android:textColor="#000"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                android:textStyle="bold" />


            <TextView
                android:id="@+id/jobnosewing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/dashes"
                android:textSize="15sp"

                />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/sewingimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/noimage"
        android:layout_gravity="center"
        />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/sewing"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark" />


    <ListView
        android:id="@+id/sweing_data_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="10dp">

    </ListView>



</LinearLayout>